# Project-3

./: .gitignore  CMakeLists.txt  README.md
src/: detect_object.cpp  helpers.cpp  helpers.hpp  knn.csv  nn.csv
